--- a/Security.Infrastructure/Security.Infrastructure.csproj
+++ b/Security.Infrastructure/Security.Infrastructure.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
         <TargetFramework>net8.0</TargetFramework>
@@ -28,12 +28,12 @@
     </ItemGroup>
 
     <ItemGroup>
-        <ProjectReference Include="..\..\..\Framework\MGH.Core.Infrastructure.ElasticSearch\MGH.Core.Infrastructure.ElasticSearch.csproj" />
-        <ProjectReference Include="..\..\..\Framework\MGH.Core.Infrastructure.HealthCheck\MGH.Core.Infrastructure.HealthCheck.csproj" />
-        <ProjectReference Include="..\..\..\Framework\MGH.Core.Infrastructure\MGH.Core.Infrastructure.csproj" />
+        <ProjectReference Include="..\Framework\MGH.Core.Infrastructure.ElasticSearch\MGH.Core.Infrastructure.ElasticSearch.csproj" />
+        <ProjectReference Include="..\Framework\MGH.Core.Infrastructure.HealthCheck\MGH.Core.Infrastructure.HealthCheck.csproj" />
+        <ProjectReference Include="..\Framework\MGH.Core.Infrastructure\MGH.Core.Infrastructure.csproj" />
         <ProjectReference Include="..\Security.Domain\Security.Domain.csproj" />
-        <ProjectReference Include="..\..\..\Framework\MGH.Core.Infrastructure.EventBus.RabbitMq\MGH.Core.Infrastructure.EventBus.RabbitMq.csproj" />
-        <ProjectReference Include="..\..\..\Framework\MGH.Core.Infrastructure.Securities\MGH.Core.Infrastructure.Securities.csproj" />
+        <ProjectReference Include="..\Framework\MGH.Core.Infrastructure.EventBus.RabbitMq\MGH.Core.Infrastructure.EventBus.RabbitMq.csproj" />
+        <ProjectReference Include="..\Framework\MGH.Core.Infrastructure.Securities\MGH.Core.Infrastructure.Securities.csproj" />
     </ItemGroup>
 
 
