--- a/Security.Domain/Security.Domain.csproj
+++ b/Security.Domain/Security.Domain.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
         <TargetFramework>net8.0</TargetFramework>
@@ -7,9 +7,9 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <ProjectReference Include="..\..\..\Framework\MGH.Core.CrossCutting\MGH.Core.CrossCutting.csproj"/>
-        <ProjectReference Include="..\..\..\Framework\MGH.Core.Infrastructure.Securities\MGH.Core.Infrastructure.Securities.csproj" />
-        <ProjectReference Include="..\..\..\Framework\MGH.Core.Infrastructure.Persistence.EF\MGH.Core.Infrastructure.Persistence.EF.csproj" />
+        <ProjectReference Include="..\Framework\MGH.Core.CrossCutting\MGH.Core.CrossCutting.csproj"/>
+        <ProjectReference Include="..\Framework\MGH.Core.Infrastructure.Securities\MGH.Core.Infrastructure.Securities.csproj" />
+        <ProjectReference Include="..\Framework\MGH.Core.Infrastructure.Persistence.EF\MGH.Core.Infrastructure.Persistence.EF.csproj" />
     </ItemGroup>
 
     <ItemGroup>
