--- a/Security.Endpoint.Api/Security.Endpoint.Api.csproj
+++ b/Security.Endpoint.Api/Security.Endpoint.Api.csproj
@@ -8,6 +8,16 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <Compile Remove="wwwroot\**" />
+      <Content Remove="wwwroot\**" />
+      <Content Include="..\.dockerignore">
+        <Link>.dockerignore</Link>
+      </Content>
+      <EmbeddedResource Remove="wwwroot\**" />
+      <None Remove="wwwroot\**" />
+    </ItemGroup>
+
+    <ItemGroup>
         <PackageReference Include="Asp.Versioning.Abstractions" Version="8.1.0" />
         <PackageReference Include="Asp.Versioning.Http" Version="8.1.0" />
         <PackageReference Include="Asp.Versioning.Mvc" Version="8.1.0" />
@@ -21,16 +31,12 @@
             <PrivateAssets>all</PrivateAssets>
         </PackageReference>
         <PackageReference Include="MediatR" Version="12.4.0" />
-		<PackageReference Include="MGH.Core.Endpoint.Swagger" Version="3.0.1"/>
-		<PackageReference Include="MGH.Core.Endpoint.Web" Version="3.0.1"/>
+		<PackageReference Include="MGH.Core.Endpoint.Swagger" Version="3.0.1" />
+		<PackageReference Include="MGH.Core.Endpoint.Web" Version="3.0.1" />
 	</ItemGroup>
 
     <ItemGroup>
         <ProjectReference Include="..\Security.Application\Security.Application.csproj" />
         <ProjectReference Include="..\Security.Infrastructure\Security.Infrastructure.csproj" />
-    </ItemGroup>
-
-    <ItemGroup>
-      <Folder Include="wwwroot\" />
     </ItemGroup>
 </Project>
