--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -1,11 +1,12 @@
-﻿# docker-compose.override.yml
+﻿version: '3.9'
+
 services:
   security.endpoint.api:
     environment:
-      - ASPNETCORE_ENVIRONMENT=Development
+      - ASPNETCORE_ENVIRONMENT=${ASPNETCORE_ENVIRONMENT:-Development}
       - DOTNET_USE_POLLING_FILE_WATCHER=true
     volumes:
-      # mount source code into /src instead of overwriting /app
+      # Mount source code into /src for live coding
       - ./Security.Endpoint.Api:/src:ro
       - /app/bin
       - /app/obj
