--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-﻿version: '3.9'
+﻿#version: '3.9'
 
 services:
   security.endpoint.api:
@@ -11,18 +11,19 @@ services:
     ports:
       - "${API_PORT:-5278}:8080"
     environment:
-      - ASPNETCORE_ENVIRONMENT=${ASPNETCORE_ENVIRONMENT:-Development}
-      - ASPNETCORE_URLS=http://+:8080
-      - TokenOptions__Audience=${JWT_AUDIENCE}
-      - TokenOptions__Issuer=${JWT_ISSUER}
-      - TokenOptions__AccessTokenExpiration=${JWT_ACCESS_TOKEN_EXPIRATION}
-      - TokenOptions__SecurityKey=${JWT_SECURITY_KEY}
-      - TokenOptions__RefreshTokenTtl=${JWT_REFRESH_TOKEN_TTL}
-      - DatabaseConnection__SqlConnection=Data Source=${SQL_SERVER_HOST};Initial Catalog=${SQL_DATABASE};User ID=sa;Password=${DB_SA_PASSWORD};Integrated Security=false;MultipleActiveResultSets=true;TrustServerCertificate=True
+      ASPNETCORE_ENVIRONMENT: ${ASPNETCORE_ENVIRONMENT:-Development}
+      ASPNETCORE_URLS: http://+:8080
+      TokenOptions__Audience: ${JWT_AUDIENCE}
+      TokenOptions__Issuer: ${JWT_ISSUER}
+      TokenOptions__AccessTokenExpiration: ${JWT_ACCESS_TOKEN_EXPIRATION}
+      TokenOptions__SecurityKey: ${JWT_SECURITY_KEY}
+      TokenOptions__RefreshTokenTtl: ${JWT_REFRESH_TOKEN_TTL}
+      DatabaseConnection__SqlConnection: "Data Source=${SQL_SERVER_HOST};Initial Catalog=${SQL_DATABASE};User ID=sa;Password=${DB_SA_PASSWORD};Integrated Security=false;MultipleActiveResultSets=true;TrustServerCertificate=True"
     extra_hosts:
       - "host.docker.internal:host-gateway"
     volumes:
       - app-logs:/app/logs
+    restart: always
 
 volumes:
   app-logs:
