bugfix in docker-compose build and run

--- a/Security.Endpoint.Api/Dockerfile
+++ b/Security.Endpoint.Api/Dockerfile
@@ -1,4 +1,4 @@
-﻿FROM mcr.microsoft.com/dotnet/aspnet:8.0 AS base
+FROM mcr.microsoft.com/dotnet/aspnet:8.0 AS base
 USER $APP_UID
 WORKDIR /app
 RUN mkdir -p /app/logs && chmod 777 /app/logs
