--- a/Security.Endpoint.Api/appsettings.Development.json
+++ b/Security.Endpoint.Api/appsettings.Development.json
@@ -15,7 +15,7 @@
             "Id": "Bearer"
         },
         "OpenApiInfoConfig": {
-            "Title": "Library microservice",
+            "Title": "Security System",
             "Version": "v1",
             "Description": "API"
         }
